# mcp_browser_tool

./: .gitignore  Dockerfile  LICENSE  README.md  browser_tool.py  docker-compose.yml  main.py  pyproject.toml
tests/: test_browser_tool.py  test_server.py
